<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".input_famous_point">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:onClick="prevActivity"
        android:text="@string/prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent" />





    <TextView
        android:id="@+id/textView5"
        android:layout_width="375dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/famous_point_power"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/frame"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/frame"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/F_X_f"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/F_x_f"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/F_y"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/F_y"
            android:inputType="number"
            android:minHeight="48dp" />


    </TableRow>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="192dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="56dp"
        android:layout_height="31dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="104dp"
        android:text="@string/seacrh_point"
        android:textColor="@color/cardview_dark_background"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:hint="Точка"
        android:textSize="17sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>